--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -13,7 +13,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css"
         integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+
+
+
     <title>Recipes</title>
 
     <style>
@@ -57,7 +62,7 @@
             --font-primary: sans-serif;
             --font-headings: 'Roboto Slab', serif;
 
-            --spacing-gutter-medium: 3rem;
+            --spacing-gutter-medium: 2.5rem;
             --spacing-gutter-large: 4rem;
         }
 
@@ -76,10 +81,21 @@
         bory {
             font-size: 1.6rem;
             font-family: var(--font-primary);
+            background: var(--color-gray-1);
 
         }
 
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: var(--font-headings);
+        }
+
         .container {
+            padding: var(--spacing-gutter-medium);
             max-width: 104rem;
             margin: 0 auto;
 
@@ -106,6 +122,51 @@
             margin-right: 1rem;
 
 
+        }
+
+        .search-form {
+            border: .2rem solid var(--color-dark-text);
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input,
+        .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+            transition: all 300ms ease-in-out;
+
+        }
+
+        .search-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .search-input {
+            width: 100%;
+            padding-right: 3rem;
+        }
+
+        .search-form:focus-within {
+            border-color: var(--color-success-dark);
+            background: var(--color-white);
+
+        }
+
+        .search-form:focus-within .search-button {
+            color: var(--color-primary);
+        }
+
+        .search-button:focus {
+            outline: 1px solid var(--color-primary-dark);
+            background: rgba(0, 0, 0, 0.2);
         }
     </style>
 
