--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -22,6 +22,23 @@
     <title>Recipes</title>
 
     <style>
+        bory {
+            font-size: 1.6rem;
+            font-family: var(--font-primary);
+            background: var(--color-gray-1);
+
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: var(--font-headings);
+            color: var(--color-dark-text);
+        }
+
         :root {
             --color-primary: #269fe6;
             --color-primary-hover: #2086c2;
@@ -76,22 +93,6 @@
         html {
             font-size: 62.5%;
 
-        }
-
-        bory {
-            font-size: 1.6rem;
-            font-family: var(--font-primary);
-            background: var(--color-gray-1);
-
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: var(--font-headings);
         }
 
         .container {
@@ -167,6 +168,85 @@
         .search-button:focus {
             outline: 1px solid var(--color-primary-dark);
             background: rgba(0, 0, 0, 0.2);
+        }
+
+        .main-content {
+            padding-top: 0;
+
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(290px, 1rem));
+            gap: var(--spacing-gutter-large);
+
+        }
+
+        .recipe-list-item {
+            max-width: 60rem;
+            background: var(--color-white);
+
+        }
+
+        .recipe img {
+            max-width: 100%;
+            box-shadow: -5px 5px 15px var(--color-dark-text);
+            transition: all 300ms ease-in-out;
+            transform: scale(1);
+        }
+
+        .recipe-list-item:hover {
+            transform: scale(1.02);
+            box-shadow: -10px 10px 10px rgba(0, 0, 0, .25);
+        }
+
+        .recipe-title-container {
+            padding: 1rem;
+            padding-top: 1.2rem;
+            color: var();
+        }
+
+        .recipe-content {
+            padding: 1rem;
+            color: var(--color-gray-8);
+            font-size: var(--font-primary);
+        }
+
+        .recipe-author {
+            margin-left: 1rem;
+        }
+
+        .recipe-author-item {
+            color: var(--color-gray-4);
+            margin-right: 1rem;
+        }
+
+        .recipe-author a {
+            color: var(--color-primary);
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .recipe-author a:hover {
+            color: var(--color-primary-dark);
+        }
+
+        .recipe-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: 1rem;
+        }
+
+        .recipe-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            align-items: center;
+        }
+
+        .recipe-meta-title {
+            font-size: 1.3rem;
         }
     </style>
 
