--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -22,7 +22,7 @@
     <title>Recipes</title>
 
     <style>
-        bory {
+        body {
             font-size: 1.6rem;
             font-family: var(--font-primary);
             background: var(--color-gray-1);
@@ -86,7 +86,6 @@
         * {
             padding: 0;
             margin: 0;
-            box-sizing: border-box;
 
         }
 
@@ -96,11 +95,12 @@
         }
 
         .container {
-            padding: var(--spacing-gutter-medium);
-            max-width: 104rem;
+            padding: var(--spacing-gutter-large);
+            max-width: 145rem;
             margin: 0 auto;
-
+            box-sizing: border-box;
         }
+
 
         .main-header-container {
             background: var(--color-primary-dark);
@@ -172,27 +172,47 @@
 
         .main-content {
             padding-top: 0;
-
         }
 
         .main-content-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(290px, 1rem));
-            gap: var(--spacing-gutter-large);
+            grid-template-columns: repeat(auto-fit, minmax(273px, 1fr));
+            gap: var(--spacing-gutter-medium);
 
         }
+
+
+        .temp {
+            background: red;
+            height: 40rem;
+
+        }
+
+
+
 
         .recipe-list-item {
             max-width: 60rem;
             background: var(--color-white);
+            /* ... outros estilos ... */
+        }
 
+        .recipe-cover,
+        .recipe-title-container {
+            width: 100%;
         }
 
         .recipe img {
             max-width: 100%;
+        }
+
+        .recipe {
             box-shadow: -5px 5px 15px var(--color-dark-text);
             transition: all 300ms ease-in-out;
             transform: scale(1);
+            border-radius: .4rem;
+            overflow: hidden;
+
         }
 
         .recipe-list-item:hover {
@@ -203,7 +223,7 @@
         .recipe-title-container {
             padding: 1rem;
             padding-top: 1.2rem;
-            color: var();
+
         }
 
         .recipe-content {
@@ -215,6 +235,7 @@
         .recipe-author {
             margin-left: 1rem;
         }
+
 
         .recipe-author-item {
             color: var(--color-gray-4);
@@ -248,6 +269,36 @@
         .recipe-meta-title {
             font-size: 1.3rem;
         }
-    </style>
 
+
+        .recipe-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            padding: 1.3rem;
+        }
+
+        .main-footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: var(--color-primary-dark);
+            color: white;
+            padding: var(--spacing-gutter-medium);
+        }
+
+        .main-footer a {
+            color: white;
+            text-decoration: none;
+            transition: all 300ms ease-in-out;
+
+        }
+
+        .main-footer a:hover {
+            filter: brightness(.05);
+
+        }
+    </style>
 </head>
