--- a/recipes/templates/recipes/pages/recipe-id.html
+++ b/recipes/templates/recipes/pages/recipe-id.html
@@ -1,21 +1,13 @@
-{% include "recipes/partials/head.html" %}
+{% extends "global/base.html" %}
 
-<body>
-    {% include "recipes/partials/header.html" %}
-    {% include "recipes/partials/search.html" %}
-    <main class="content-container">
-        <div class="main-content main-content-detail container">
-            {% include "recipes/partials/recipe.html" %}
-            
-            
-        </div>
-    </main>    
-        
-    {% include "recipes/partials/footer.html" %}
 
-        
-    
-</body>
+<title> {% block title %} Alterar {% endblock title %} </title>
 
-</html>
 
+{% block content %}
+<div class="main-content main-content-detail container">
+    {% include "recipes/partials/recipe.html" %}
+
+
+</div>
+{% endblock content %}
