--- a/recipes/templates/recipes/pages/recipe-id.html
+++ b/recipes/templates/recipes/pages/recipe-id.html
@@ -1,13 +1,9 @@
-{% extends "global/base.html" %}
+{% extends 'global/base.html' %}
 
 
 <title> {% block title %} Alterar {% endblock title %} </title>
-
-
 {% block content %}
-<div class="main-content main-content-detail container">
-    {% include "recipes/partials/recipe.html" %}
-
-
-</div>
+    <div class="main-content main-content-detail container">
+        {% include 'recipes/partials/recipe.html' %}
+    </div>
 {% endblock content %}
