--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,30 +1,32 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="{{ recipe.cover.url }}" alt="temporario">
+        <a href=""></a>
+        <img src="{{recipe.cover.url}}" alt="temporario">
     </div>
         <div class="recipe-title-container">
             <h2 class="recipe-title">{{ recipe.title }}</h2>
         </div>
         <div class="recipe-author">
             <span class="recipe-author-item">
-                <i class="fas fa-user"></i>
-                {{ recipe.author.first_name }}
+                <i class="fas fa-user"> {{recipe.author.first_name }}
+                    </i>
+                   
             </span>
             <span class="recipe-author-item">
-                <i class="fas fa-calendar-alt"></i>
-                {{ recipe.created_at }} 
+                <i class="fas fa-calendar-alt">{{ recipe.created_at }}</i>
+                 
                 
             </span>
             <span class="recipe-author-item">
                 <a href="">
                     <i class="fas fa-layer-group"></i>
-                    <span>{{ recipe.category.name}} </span>
+                    <span>{{ recipe.category.name}}</span>
                 </a>
             </span>
         </div>
         <div class="recipe-content">
             <p>
-                {{ recipe.preparation_steps}} 
+                {{ recipe.description}} 
             </p>
         </div>
         <div class="recipe-meta-container">
@@ -38,16 +40,24 @@
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
             <div class="recipe-meta-text">
-                
-                {{ recipe.servings}}
-                Porções
+                {{ recipe.servings}}   {{ recipe.servings_unit}}
             </div>
         </div>
         </div>
-    <footer class="recipe-footer">
-        <a href="" class="recipe-read-more">
-            <i class="fas fa-eye"></i>
-            <span>Ver mais ..</span>
-        </a>
-    </footer>
+        {% if is_detail_page is not True %}
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width" href="{% url "recipe-recipes" %}">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+        {% endif %}
+
+        {% if is_detail_page is True %}
+            <div class="preparation-steps">
+                {{ recipe.preparation_steps|linebreaksbr }}
+            </div>
+        {% endif %}
+        
+
 </div>
